<resources>
    <string name="app_name">My Application</string>
    <string name="addBtn">Add Event</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="eventName">Enter Event Name</string>
    <string name="enterLocation">Enter Location</string>
    <string name="eventDate">Enter Data</string>
    <string name="eventTime">Enter Time</string>
    <string name="save">Save</string>
    <string name="updatebutton">Update</string>
</resources>