<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddEventActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back01" />

    <EditText
        android:id="@+id/eventName"
        android:layout_width="365dp"
        android:layout_height="59dp"
        android:layout_marginTop="176dp"
        android:background="@drawable/lavender_border"
        android:gravity="start|center_vertical"
        android:hint="@string/eventName"
        android:padding="16dp"
        android:textColor="@color/lavender"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <EditText
        android:id="@+id/eventLocation"
        android:layout_width="365dp"
        android:layout_height="59dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/lavender_border"
        android:gravity="start|center_vertical"
        android:hint="@string/enterLocation"
        android:padding="16dp"
        android:textColor="@color/lavender"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventName" />

    <EditText
        android:id="@+id/eventDate"
        android:layout_width="365dp"
        android:layout_height="59dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/lavender_border"
        android:gravity="start|center_vertical"
        android:hint="@string/eventDate"
        android:padding="16dp"
        android:textColor="@color/lavender"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventLocation" />

    <EditText
        android:id="@+id/eventTime"
        android:layout_width="365dp"
        android:layout_height="59dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/lavender_border"
        android:gravity="start|center_vertical"
        android:hint="@string/eventTime"
        android:padding="16dp"
        android:textColor="@color/lavender"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventDate" />


    <Button
        android:id="@+id/saveButton"
        android:layout_width="365dp"
        android:layout_height="63dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/lavender"
        android:text="@string/save"
        android:textSize="24sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventTime" />

</androidx.constraintlayout.widget.ConstraintLayout>