<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity22">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back01" />

    <Button
        android:id="@+id/addEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:width="350dp"
        android:backgroundTint="@color/lavender"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/addBtn"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="165dp"
        android:layout_height="67dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="@color/white"
        android:paddingLeft="30dp"
        android:paddingTop="15dp"
        android:paddingRight="30dp"
        android:paddingBottom="15dp"
        android:text="@string/delete"
        android:textColor="@color/lavender"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addEventButton" />

    <Button
        android:id="@+id/updateBtn"
        android:layout_width="174dp"
        android:layout_height="69dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:paddingLeft="30dp"
        android:paddingTop="15dp"
        android:paddingRight="30dp"
        android:paddingBottom="15dp"
        android:text="@string/update"
        android:textColor="@color/lavender"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/deleteBtn"
        app:layout_constraintHorizontal_bias="0.756"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addEventButton" />

    <Button
        android:id="@+id/viewBtn"
        android:layout_width="174dp"
        android:layout_height="69dp"
        android:layout_marginTop="662dp"
        android:backgroundTint="@color/white"
        android:paddingLeft="30dp"
        android:paddingTop="15dp"
        android:paddingRight="30dp"
        android:paddingBottom="15dp"
        android:text="View"
        android:textColor="@color/lavender"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>